plugins {
	id 'java'
	id 'org.springframework.boot' version "${springBootVersion}"
	id 'io.spring.dependency-management' version "${springDependencyManagementVersion}"
}

group = "${projectGroup}"
version = "${applicationVersion}"

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Data JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	//Spring Security
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// Spring Validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// Spring start-web
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// utility
	implementation 'org.apache.commons:commons-lang3:3.17.0'
	implementation 'org.apache.commons:commons-collections4:4.4'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// MySQL
	runtimeOnly 'com.mysql:mysql-connector-j'

	// H2
	runtimeOnly 'com.h2database:h2'
	// JWT
	implementation "io.jsonwebtoken:jjwt-api:0.11.5"
	runtimeOnly "io.jsonwebtoken:jjwt-impl:0.11.5"
	runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.11.5"

	// encoding
	implementation 'com.google.guava:guava:33.4.0-jre'

	// Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// OAuth
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
